--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.fontSize": 18
-}
+    "editor.fontSize": 18,
+    "eslint.validate": [
+      "javascript",
+      "javascriptreact",]
+  }
