--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.5.1",
+    "@material-ui/pickers": "^3.2.10",
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
+    "date-fns": "^2.9.0",
+    "downshift": "^5.0.3",
     "google-map-react": "^1.1.5",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.5",
