--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.5.1",
+    "@material-ui/core": "^4.9.4",
     "@material-ui/pickers": "^3.2.10",
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
@@ -9,6 +9,7 @@
     "downshift": "^5.0.3",
     "google-map-react": "^1.1.5",
     "isomorphic-unfetch": "^3.0.0",
+    "material-ui": "^0.20.2",
     "next": "^9.0.5",
     "next-compose-plugins": "^2.2.0",
     "node-fetch": "^2.3.0",
