--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "google-map-react": "^1.1.5",
     "isomorphic-unfetch": "^3.0.0",
     "material-ui": "^0.20.2",
-    "next": "^9.0.5",
+    "next": "latest",
     "next-compose-plugins": "^2.2.0",
     "node-fetch": "^2.3.0",
     "nprogress": "^0.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ionicons": "^3.0.1",
-    "react-slick": "^0.25.2",
+    "react-slick": "^0.26.1",
     "slick-carousel": "^1.8.1",
     "url-loader": "^2.2.0"
   }
